--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -10,9 +10,6 @@
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
     <string name="title_activity_signin">SigninActivity</string>
-    <string name="Import_TDF">Import TDF</string>
-    <string name="Import_JSON">Import JSON</string>
-    <string name="Export_JSON">Export JSON</string>
     <string name="After">After: %1$s.</string>
     <string name="Deadline">Deadline: %1$s</string>
     <string name="Recycles">Recycles: %1$s</string>
@@ -25,4 +22,7 @@
     <string name="Earliest">Earliest: %1$s</string>
     <string name="Latest">Latest: %1$s</string>
     <string name="WLA">WLA %1$d</string>
+    <string name="import_tdf">Import_TDF</string>
+    <string name="import_json">Import_JSON</string>
+    <string name="export_json">Export_JSON</string>
 </resources>
